--- a/Web/react/package.json
+++ b/Web/react/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline --content-base ."
+    "start": "webpack-dev-server --inline --content-base . --history-api-fallback",
+    "production": "webpack -p"
   },
   "repository": {
     "type": "git",
