--- a/Web/react/package.json
+++ b/Web/react/package.json
@@ -25,7 +25,9 @@
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "firebase": "2.3.1",
     "html-webpack-plugin": "^2.7.1",
+    "re-base": "1.2.1",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   },
