--- a/Web/react/package.json
+++ b/Web/react/package.json
@@ -27,7 +27,7 @@
     "babel-preset-react": "^6.5.0",
     "firebase": "2.3.1",
     "html-webpack-plugin": "^2.7.1",
-    "re-base": "1.2.1",
+    "re-base": "git://github.com/qwales1/re-base.git#firebase-3.x.x",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   },
